--- a/uj/zajecia/24-25z/ljk4/index.html
+++ b/uj/zajecia/24-25z/ljk4/index.html
@@ -164,8 +164,8 @@
 		</tbody>
 			<tr>
 				<th scope="row">14</th>
-				<td>3 lutego 2025 <nobr>(11.30–12.30)</nobr></td>
-				<td class="schedule-exam" colspan="2">Egzamin</td>
+				<td>3 lutego 2025</td>
+				<td class="schedule-exam" colspan="2">Egzamin <nobr>(11.30–12.30, s. 1.01)</nobr></td>
 			</tr>
 		</tbody>
 	</table>
