--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -77,9 +77,9 @@
 	<summary class="h2">Tematy tekstów</summary>
 
 	<ul class="sample-topics">
-		<li>folklor/szamanizm</li>
 		<li>popkultura</li>
 		<li><del>bieżące sprawy</del></li>
+		<li><del>folklor/szamanizm</del></li>
 		<li><del>jedzenie koreańskie</del></li>
 		<li><del>militaria (Polska-Korea)</del></li>
 		<li><del>motoryzacja</del></li>
@@ -255,15 +255,15 @@
 				<th scope="row">13</th>
 				<td>24 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">folklor</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/12">흥부와 놀부 이야기</a></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">14</th>
 				<td>31 stycznia 2025</td>
-				<td class="schedule-exam">Test końcowy (8.30–9.30)</td>
+				<td class="schedule-exam">Test końcowy <nobr>(8.30–9.30, s. 1.03)</nobr></td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
 			</tr>
