--- a/uj/zajecia/24-25z/wats3-1/testy/3/index.html
+++ b/uj/zajecia/24-25z/wats3-1/testy/3/index.html
@@ -31,8 +31,38 @@
 	<h3>번역</h3>
 
 	<p>0. "우와! 산타 할아버지가 우리 집에!"</p>
+	<ul>
+		<li>''Oh! Święty Mikołaj jest u nas w domu!'' [2/2 - oh → och]</li>
+		<li>Ojejku! Święty Mikołaj w naszym domu! [2/2]</li>
+		<li>"Ojej! Święty Mikołaj jest w naszym domu!" [2/2]</li>
+		<li>,,O jejku! Święty Mikołaj w naszym domu!" [2/2]</li>
+		<li>„Ojejku! Święty Mikołaj w naszym domu!" [2/2]</li>
+		<li>Ojej! Mikołaj w naszych domach! [1,5/2 - w naszym domu]</li>
+		<li>"Wow! Święty Mikołaj u nas w domu!" [2/2 - wow → ojej]</li>
+		<li>"Jejku! Święty Mikołaj w naszym domu!" [2/2]</li>
+	</ul>
 	<p>1. 경북 성주군 이웃사촌복지센터가 소외 이웃에게 온정을 전하며 희망의 불씨를 밝힌다.</p>
+	<ul>
+		<li>Sąsiedzkie Centrum w powiecie Seogju-gun, Gyeongsangbuk, przesyła ciepło potrzebującym oraz rozpala iskrę nadziei. [1/2 - brakuje „복지”; prowincji Gyeongsangbuk]</li>
+		<li>Centrum społeczności sąsiedzkiej w powiecie Seongju-gun w Gyeongsangbuk-do, przekazuje ciepło osobom marginalizowanym i rozpala w nich iskrę nadziei. [1,5/2 - brakuje „복지”]</li>
+		<li>Regionalne Centrum Wsparcia w powiecie Seongju w prowincji Gyeongsang Północny rozpala iskrę nadziei wyciągając pomocną dłoń do potrzebujących sąsiadów. [1,5/2 - regionalne → sąsiedzkie]</li>
+		<li>W prowincji Gyeongbuk w powiecie Seongju, centrum sąsiadów z naprzeciwka przekazuje pomocną dłonią, iskrę nadziei w wykluczonych sąsiadach. [1/2 - prowincji Gyeongsang Północny; przekazuje wykluczonym sąsiadom]</li>
+		<li>W Seongju, w prowincji Gyeongsangbuk, w Centrum Wsparcia Sąsiedzkiego rozpala się iskra nadziei i ciepło w sercu wśród osamotnionych sąsiadów. [1/2 - w powiecie Seongju; Centrum rozpala iskrę nadziei i ciepło w sercu]</li>
+		<li>W powiacie Gyeonbuk Seongju-gun sąsiedzkie centrum pomocy pragnie okazać wykluczonym sąsiadom w potrzebie ciepłe serce rozpalając iskrę nadziei. [0,5/2 - w powiecie Seongju w prowincji Gyeongsang Północny; bez „pragnie”; okazuje ciepłe serce i rozpala iskrę nadziej]</li>
+		<li>W powiecie Seongju prowincji Gyungsangbuk, w Sąsiedzkim Centrum Pomocy Społecznej rozpalona została iskra nadziei dla potrzebujących sąsiadów. [1,5/2 - brakuje „온정을 전하며”]</li>
+		<li>Święty Mikołaj z Gyeonbuk kraju, który sąsiaduje z Seongju wychodzi z pomocną reką od sąsiada by rozpalić iskrę nadziei dla samotnych osób. [0/2 - inny sens]</li>
+	</ul>
 	<p>2. 센터는 취약계층의 유·청소년을 대상으로 'Merry 희망 Day!' 행사를 진행하고 있다.</p>
+	<ul>
+		<li>Centrum organizuje akcję 'Wesołego dnia nadziei!' skierowaną do dzieci i młodzieży w potrzebie.</li>
+		<li>Centrum organizuje wydarzenie „Wesołego Dnia Nadziei!” Dla dzieci i młodzieży.</li>
+		<li>Centrum organizuje wydarzenie pod nazwą "Wesołego Dnia Nadziei" dla potrzebujących dzieci i młodzieży.</li>
+		<li>Centrum zorganizowało wydarzenie ,, Wesołego Dnia Nadziei!" dla nastoletnich osób potrzebujących.</li>
+		<li>Święty Mikołaj bierze udział w wydarzeniu pt. „Wesołego Dnia Nadziei!", które skierowane jest w stronę potrzebujących dzieci i młodzieży.</li>
+		<li>Centrum pomocy osobom potrzebującym prowadzi akcję "Wesoły Dzień Nadziei" wycelowaną w dzieci i młodzież.</li>
+		<li>W centrum tym zorganizowana została akcja "Wesołego dnia Nadziei!" dla potrzebujących dzieci i młodzieży.</li>
+		<li>Święty Mikołaj organizuje wydarzenie dla dzieci i młodzież w potrzebie pod tytułem "Wesołego dnia nadziei".</li>
+	</ul>
 </div>
 
 <div class="exam-question">
@@ -49,9 +79,45 @@
 	<h3>번역</h3>
 
 	<p>3-1. 행사 첫날인 12월 17일 저녁 산타 복장의 봉사자들은</p>
+	<ul>
+		<li>Podczas pierwszego dnia wydarzenia, 17 grudnia wieczorem, wolontariusze w strojach Świętego Mikołaja</li>
+		<li>17 grudnia wieczorem, czyli w pierwszy dzień wydarzenia, wolontariusze przebrani w strój Świętego Mikołaja</li>
+		<li>Wieczorem 17 grudnia podczas pierwszego dnia wydarzenia wolontariusze w przebraniu Świętego Mikołaja,</li>
+		<li>W pierwszy dzień wydarzenia - wieczorem 17 grudnia - wolontariusze przebrali się w strój Św. Mikołaja.</li>
+		<li>Pierwszy dzień wydarzenia to 17 grudnia, kiedy wolontariusze przebrani w strój Mikołaja</li>
+		<li>17 grudnia wieczorem, pierwszego dnia akcji, wolontariusze ubrani w stroje Świętego Mikołaja odwiedzali domy dzieci i przekazywali im prezenty.</li>
+	</ul>
 	<p>3-2. 아이들의 집을 찾아 깜짝 선물을 전했다.</p>
+	<ul>
+		<li>odwiedzili domy dzieci obdarowując je prezentami.</li>
+		<li>odwiedzili domy dzieci i wręczyli im prezenty.</li>
+		<li>znalazły domy dzieci i z zaskoczeniem przekazali im prezenty.</li>
+		<li>Pojawili się nagle w domach dzieci i wręczyli prezenty.</li>
+		<li>udadzą się do domu dzieci by dostarczyć im prezenty.</li>
+		<li>3. Wieczorem 17 grudnia, pierwszego dnia wydarzenia, wolontariusze przebrani za Świętego Mikołaja odwiedzili dom dziecka i wręczyli niespodziewane prezenty..</li>
+		<li>3. Pierwszego dnia wydarzenia, które odbywa się 17 grudnia bieżącego roku wolontariusze w stroju Świętego Mikołaja przygotowują niespodziankę poszukiwania domu dla dzieci.</li>
+	</ul>
 	<p>4-1. 생각지도 못한 산타의 등장에 아이들은 놀라워했고,</p>
+	<ul>
+		<li>Dzieci nie mogły uwierzyć w pojawienie się Świętego Mikołaja,</li>
+		<li>Dzieci były zaskoczone niespodziewanym pojawieniem się Świętego Mikołaja.</li>
+		<li>Dzieci, które nie wiedziały o wizycie Mikołaja, były zaskoczone jego przybyciem,</li>
+		<li>Dzieci, które niespodziewały się pojawienia Świętego Mikołaja były zaskoczone,</li>
+		<li>Niespodziewane pojawienie się Świętego Mikołaja sprawiło, że dzieci były zaskoczone.</li>
+		<li>Pojawienie się Mikołaja zaskoczyło niespodziewających się tego dzieci,</li>
+		<li>Niespodziewane pojawienie się świętego Mikołaja, które jest zaskoczeniem dla dzieci</li>
+	</ul>
 	<p>4-2. 선물을 받고 기뻐하며 크리스마스 트리를 함께 꾸미는 등 특별한 시간을 가졌다.</p>
+	<ul>
+		<li>i były szczęśliwe, że otrzymały prezenty, a także spędziły wyjątkowy czas ozdabiając świąteczne drzewko.</li>
+		<li>Ucieszyły się, że otrzymały prezenty i miedzy innymi razem dekorując choinkę spędzili wyjątkowy czas.</li>
+		<li>jednak gdy otrzymały prezenty i ozdobiły choinkę ornamentami, spędziły wyjątkowy czas.</li>
+		<li>dostały prezenty, szczęśliwe dekorowały razem choinkę i tym podobne, spędzając przy tym wyjątkowy czas.</li>
+		<li>Spędziły ten wyjątkowy czas, otrzymując prezenty i z radością ubierając choinkę.</li>
+		<li>dla których otrzymanie prezentów, wspólne strojenie choinki itp. było szczególnie spędzonym czasem.</li>
+		<li>wraz z radością z otrzymywania prezentów pod choinką sprawia, że jest to szczególny czas.</li>
+		<li>4. Nigdy niespodziewana wizyta Mikołaja zaskoczyła dzieci, a po otrzymaniu prezentów wspólnie radośnie spędziły ten szczególny czas między innymi na strojeniu świątecznej choinki.</li>
+	</ul>
 </div>
 
 <div class="exam-question">
@@ -64,14 +130,42 @@
 	<h3>번역</h3>
 
 	<p>5-1. 이날 선물을 받은 한 어린이는 "선물도 받고 산타랑 놀아서 너무 행복했어요.</p>
+	<ul>
+		<li>Tego dnia jedno z dzieci, które otrzymały prezent powiedziało z szerokim uśmiechem: ''Bardzo cieszę się, że otrzymałem prezent i mogłem bawić się ze Świętym Mikołajem.</li>
+		<li>Tego dnia, dziecko, które otrzymało prezent powiedziało: „Otrzymałem prezent i mogłem pobawić się z Mikołajem, więc byłem bardzo szczęśliwy.</li>
+		<li>Tego dnia jedno z dzieci powiedziało: "Dostanie prezentu i zabawa z Mikołajem bardzo mnie uszczęśliwiła.</li>
+		<li>Obdarowane tego dnia dziecko powiedziało: "Byłem bardzo szczęśliwy, bo dostałem prezent i mogłem pobawić się wspólnie ze Świętym Mikołajem. </li>
+	</ul>
 	<p>5-2. 매년 크리스마스가 이렇게 되었으면 좋겠어요"라며 환하게 웃었다.</p>
+	<ul>
+		<li>Mam nadzieję, że każde Święta Bożego Narodzenia będą tak wyglądać.''</li>
+		<li>Chciałbym, żeby Boże Narodzenie wyglądało tak co roku” — powiedziało dziecko z szerokim uśmiechem.</li>
+		<li>Mam nadzieję, że co roku święta będą tak wyglądały." - z szerokim uśmiechem na twarzy.</li>
+		<li>Fajnie byłoby, gdyby święta wyglądały tak co roku", uśmiechając się szeroko.</li>
+		<li>5. Jedno z dzieci, które tego dnia otrzymało prezent powiedziało z szerokim uśmiechem: "Jestem bardzo szczęśliwy, że otrzymałem prezent i bawiłem się z Mikołajem. Chciałbym spędzać święta w ten sposób co roku."</li>
+		<li>5. ,,Jestem bardzo szczęśliwy, ponieważ dostałem prezent i bawiłem się razem ze Świętym Mikołajem. Chciałbym tak spędzać Święta Bożego Narodzenia co roku." - powiedziało tak dziecko, które otrzymało tamtego dnia prezent.</li>
+		<li>5. Dziecko, które tego dnia otrzymało prezent, powiedziało z szerokim uśmiechem: „Byłem bardzo szczęśliwy, dzięki prezentom oraz zabawom ze Św. Mikołajem. Gdybym co roku spędzał Boże Narodzenie w ten sposób, byłoby cudownie".</li>
+	</ul>
 </div>
 
 <div class="exam-question">
 	<h3>Bonus</h3>
 
 	<p>6-1. 박용훈 센터장은 "모든 아이들이 소외감을 느끼지 않고</p>
+	<ul>
+		<li>Park Yong-hoon, dyrektor centrum, powiedział: „Żadne z dzieci nie czuje się pominięte”.</li>
+		<li>Dyrektor Centrum Park Yonghun powiedział: " Aby żadne dziecko nie czuło się wykluczone,</li>
+	</ul>
 	<p>6-2. 새해를 힘차게 맞이했으면 좋겠다"고 바람을 전했다.</p>
+	<ul>
+		<li>„Mam nadzieje, ze nowy rok będzie energiczny”- powiedział.</li>
+		<li>chcielibyśmy w nowym roku przyjąć je z nową energią".</li>
+		<li>6. Dyrektor centrum Park Yong-hoon powiedział: ''Mam nadzieję, że wszystkie dzieci czują, że nie zostały porzucone, i z radością powitają Nowy Rok.''</li>
+		<li>6. ,, Chciałbym aby wszystkie dzieci nie czuły wykluczenia i energetycznie przywitały nowy rok." - powiedział dyrektor centrum Park Yong-hun.</li>
+		<li>6. Park Yong Hoon, dyrektor Centrum Wsparcia Sąsiedzkiego, powiedział: „Żadne z dzieci nie czuło się wyalienowane. Byłoby wspaniale, gdybyśmy przywitali Nowy Rok z taką samą energią".</li>
+		<li>6. Szef centrum Park Yong-hoon przekazał swoje życzenie aby: " Wszyscy zmagający się z poczuciem alienacji w Nowym Roku czuli się lepiej".</li>
+		<li>6. Dyrektor ośrodka Park Yong-hun przekazał: "Mam nadzieję, że wszystkie dzieci bez poczucia wykluczenia będą miały możliwość szczęśliwie przywitać Nowy Rok".</li>
+	</ul>
 </div>
 
 <div class="exam-question">
