--- a/uj/zajecia/24-25z/wats3-1/zajecia/10/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/10/index.html
@@ -113,8 +113,35 @@
 <h2 class="homework">Praca domowa</h2>
 
 <p>6. A 씨는 위조지폐라는 사실을 몰랐다고 진술했으나 재판부는 이를 받아들이지 않았다.</p>
+<ul>
+	<li>Mężczyzna zeznał, iż nie był świadomy tego, że banknoty są sfałszowane, natomiast sąd w to nie uwierzył.</li>
+	<li>Mężczyzna zeznał, że nie miał pojęcia o tym, że banknoty są sfałszowane, ale sąd nie zaakceptował tych wyjaśnień.</li>
+	<li>Mężczyzna zeznał, że nie wiedział, że były to fałszywe banknoty, ale sąd tego nie uznał.</li>
+	<li>Mężczyzna zeznał, iż naprawdę nie wiedział, że to były fałszywe banknoty, ale sąd nie uznał jego zeznania.</li>
+	<li>Przestępca zeznał, że nie wiedział o fałszywości banknotu, lecz sąd nie przyjął tego wyjaśnienia.</li>
+	<li>Mężczyzna zeznał, że nie wiedział, że były to fałszywe banknoty, sąd jednak nie przyjął tego zeznania.</li>
+	<li></li>
+</ul>
 <p>7-1. 수사 과정에선 A 씨의 거주지에서 부분적으로 훼손된 5만원권이 100매 이상 발견됐고</p>
+<ul>
+	<li>W trakcie procesu dochodzeniowego, w mieszkaniu oskarżonego znaleziono ponad sto częściowo uszkodzonych banknotów o nominale 50 000 wonów.</li>
+	<li>W toku śledztwa w miejscu zamieszkania mężczyzny odkryto ponad sto częściowo uszkodzonych banknotów o wartości 50 000 wonów,</li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+</ul>
 <p>7-2. 절단을 위해 샤프로 금을 그어둔 지폐도 나왔다.</p>
+<ul>
+	<li>Znaleziono również banknot, który został pokreślony ołówkiem automatycznym, w celu dokonania cięcia.</li>
+	<li>a także banknoty z narysowanymi za pomocą automatycznego ołówka liniami wskazującymi miejsce cięcia.</li>
+	<li>7. Podczas śledztwa w mieszkaniu mężczyzny zostało odkrytych ponad 100 częściowo uszkodzonych banknotów o wartości 50,000 won, a także ołówek automatyczny do zakreślania linii na pieniądzach.</li>
+	<li>7. Podczas śledztwa w miejscu zamieszkania przestępcy znaleziono częściowo uszkodzone ponad 100 banknotów o nominale 50 tysięcy wonów oraz banknoty z narysowanymi ołówkiem automatycznym liniami do cięcia.</li>
+	<li>7. W trakcie śledztwa odkryto w miejscu zamieszkania przestępcy ponad 100 częściowo uszkodzonych banknotów o nominale 50000 wonów oraz pokazano także przeznaczony do cięcia banknot z narysowanymi automatycznym ołówkiem liniami.</li>
+	<li>7. Podczas śledztwa w mieszkaniu mężczyzny odkryto ponad 100 częściowo uszkodzonych banknotów pięćdziesięciotysięcznych, także takich z naniesionymi ołówkiem liniami pomocniczymi do dalszego cięcia.</li>
+	<li></li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -142,14 +169,39 @@
 <h3>번역</h3>
 
 <p>8-1. A 씨는 2020년에도 5만원권 지폐 55매를 같은 방법으로 위조해</p>
+<ul>
+	<li>Mężczyzna w 2020 roku w ten sposób podrobił 55 banknotów o wartości 50 000 wonów.</li>
+	<li>Potwierdzono, że przestępca w 2020 roku w ten sam sposób sfałszował pięćdziesiąt pięć banknotów o nominale 50 000 wonów,</li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+</ul>
 <p>8-2. 처벌받은 전력이 있는 것으로 확인됐다.</p>
+<ul>
+	<li>Potwierdzono, iż w przeszłości był karany.</li>
+	<li>za co w przeszłości był karany.</li>
+	<li>8. W 2020 roku mężczyzna w podobny sposób sfałszował 55 banknotów po 50,000 won co potwierdza, że w przeszłości był karany.</li>
+	<li>8. Potwierdzono, że mężczyzna został ukarany za sfałszowanie 55 sztuk banknotów o nominale 5 tysięcy wonów w podobny sposób w 2020 roku.</li>
+	<li>8. Potwierdzono, że mężczyzna został już skazany w 2020 roku za podrobienie 55-ciu banknotów o wartości 50000 wonów, posługując się tą samą metodą.</li>
+	<li>8. Potwierdzone zostało również, że mężczyzna był już karany w 2020 roku za sfałszowanie 55 banknotów pięćdziesięciotysięcznych w taki sam sposób.</li>
+	<li></li>
+</ul>
 
 <hr class="homework">
 
 <p>9-1. 재판부는 "통화위조 및 위조통화행사 범행은</p>
 <p>9-2. 통화에 대한 공공의 신용과 화폐의 유통에 대한 거래 안전을 심각하게 해치는 행위"라며</p>
+<ul>
+	<li>9-1/2. Sąd oznajmił, że ,, Przestępstwo fałszowania waluty i jego praktykowanie jest czynem poważnie osłabiającym publiczne zaufanie wobec bezpieczeństwa transakcji w cyrkulacji pieniędzy”.</li>
+</ul>
 <p>9-3. "피고인이 동종 또는 유사범죄로 여러 차례 형사처벌 받은 전력이 있음에도</p>
 <p>9-4. 누범기간에 범행했다는 점에서 비난 가능성이 크다"고 판단했다.</p>
+<ul>
+	<li>9. Sąd zasądził, że „fałszowanie waluty oraz posługiwanie się fałszywą walutą jest poważnym naruszeniem publicznego zaufania do pieniądza oraz bezpieczeństwa transakcji w obrocie pieniężnym”. Stwierdził również, że „oskarżony popełnił podobne przestępstwa wiele razy, pomimo okresu recydywy i z tego powodu jest to czyn wysoce naganny”.</li>
+	<li>9-3/4. Sąd zasądził, że ,, Oskarżony był już karany za te same i podobne przestępstwa, dlatego popełnienie przestępstwa w czasie recydywy podlega dużej krytyce”.</li>
+</ul>
 
 <h2>Źródło:</h2>
 
@@ -158,4 +210,3 @@
 </ul>
 
 </body></html>
-
