--- a/uj/zajecia/24-25z/wats3-1/zajecia/11/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/11/index.html
@@ -37,9 +37,18 @@
 
 <h3>번역</h3>
 
-<p>0. "에어컨은 손님 있을 때만"…'냉방 갑질' 시달리는 근로자들</p>
+<p>0. "에어컨은 손님 있을 때만"…'냉방 갑질'에 시달리는 근로자들</p>
+<ul>
+	<li>Klimatyzacja tylko dla klientów  - pracownicy cierpiący z powodu „chłodniczego mobbingu”</li>
+</ul>
 <p>1-1. 플라스틱 물질 제조업체에서 일하는 A 씨는</p>
+<ul>
+	<li>Pracownik zakładu produkującego tworzywa sztuczne</li>
+</ul>
 <p>1-2. 기온이 평균 38도, 최고 40도까지 오르는 현장에서 일을 하고 있다.</p>
+<ul>
+	<li>pracuje w temperaturze wynoszącej średnio 38 stopni, a niekiedy nawet 40 stopni.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -61,9 +70,21 @@
 <h3>번역</h3>
 
 <p>3-1. 에어컨 설치를 요구했으나</p>
+<ul>
+	<li>Pomimo próśb o instalację klimatyzacji</li>
+</ul>
 <p>3-2. 대표는 차일피일 설치를 미루고 있다.</p>
+<ul>
+	<li>szef odkłada ją w nieskończoność.</li>
+</ul>
 <p>4-1. A 씨는 현장 노동자들이 구토감, 어지럼증을 겪어도</p>
+<ul>
+	<li>Pracownik skarżył się, że robotnicy doświadczają nudności i zawrotów głowy,</li>
+</ul>
 <p>4-2. 생계 때문에 일을 그만둘 수 없다고 하소연했다.</p>
+<ul>
+	<li>ale nie mogą odejść z pracy przez konieczność utrzymania się.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -83,10 +104,25 @@
 <h3>번역</h3>
 
 <p>5-1. 주방에서 조리하는 업무를 하는 B 씨는</p>
+<ul>
+	<li>Pracownik przygotowujący jedzenie w kuchni w innym zakładzie</li>
+</ul>
 <p>5-2. 조리 중 발생하는 열기로 고통받고 있지만</p>
+<ul>
+	<li>cierpi z powodu wytwarzanego podczas gotowania ciepła,</li>
+</ul>
 <p>5-3. 사장이 손님이 있을 때만 에어컨을 켠다.</p>
+<ul>
+	<li>a jego szef włącza klimatyzację tylko wtedy, gdy są klienci.</li>
+</ul>
 <p>6-1. 직원들이 에어컨을 켜면</p>
+<ul>
+	<li>Jeśli pracownicy włączą klimatyzację,</li>
+</ul>
 <p>6-2. 사장은 "전기세가 많이 나온다"며 에어컨을 꺼버린다.</p>
+<ul>
+	<li>to szef szybko ją wyłącza, mówiąc, że „rachunki za prąd są wysokie”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -108,8 +144,17 @@
 <h3>번역</h3>
 
 <p>7-1. 기록적인 폭염에도 일부 근로자들이</p>
+<ul>
+	<li>Również w trakcie rekordowych upałów niektórzy pracownicy</li>
+</ul>
 <p>7-2. 에어컨은 물론 선풍기마저도 사용을 제한하는 '냉방 갑질'에 시달리고 있다.</p>
+<ul>
+	<li>cierpią z powodu „chłodniczego mobbingu” – nie tylko korzystanie z klimatyzacji, ale i z wentylatora jest ograniczane.</li>
+</ul>
 <p>8. 시민단체 직장갑질119은 일터에 냉방기 미설치, 사용 제한 등으로 근로자들이 고통받는 사례를 공개했다.</p>
+<ul>
+	<li>Organizacja pozarządowa Pogotowie Mobbingowe upubliczniła przypadki pracowników cierpiących z powodu braku zainstalowanej klimatyzacji lub ograniczania jej użytkowania w miejscu pracy.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -130,10 +175,22 @@
 <h3>번역</h3>
 
 <p>9-1. 특히 노인요양시설에서 일하는 C 씨의 경우</p>
+<ul>
+	<li>Szczególnym przypadkiem jest sytuacja pracownika ośrodka opieki nad seniorami,</li>
+</ul>
 <p>9-2. 관리자가 에어컨은 물론 선풍기도 틀지 못하게 한다며</p>
 <p>9-3. 직장갑질 119에 상담을 요청했다.</p>
+<ul>
+	<li>który poprosił o poradę Pogotowia Mobbingowego, ponieważ kierownik zakazał włączania nie tylko klimatyzacji, ale też i wentylatora.</li>
+</ul>
 <p>10-1. 해당 관리자는 C 씨가 선풍기를 틀면 코드를 뽑아버리고,</p>
+<ul>
+	<li>Wspomniany kierownik, gdy tylko pracownik uruchamia wentylator, wyciąga wtyczkę,</li>
+</ul>
 <p>10-2. 땀을 흘리면 땀을 왜 이렇게 많이 흘리냐며 비난했다고 한다.</p>
+<ul>
+	<li>a gdy pot z pracownika spływa, to krytykuje go, pytając, dlaczego tak bardzo się poci.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -156,8 +213,27 @@
 <h3>번역</h3>
 
 <p>11-1. 직장갑질119는 폭염에 노출된 노동자에게 필요한 것은 냉방장치이지만</p>
+<ul>
+	<li>Pogotowie Mobbingowie mówi, że „wystawieni na upał robotnicy potrzebują klimatyzatorów,</li>
+</ul>
 <p>11-2. 이를 강제하는 규정은 어디에도 없다"고 했다.</p>
+<ul>
+	<li>jednak nigdzie nie ma regulacji, które by to wymusiły”.</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
+
 <p>12. 단체는 실효성 있는 법제도 마련과 인식개선을 위한 적극적인 관리 감독이 필요하다고 강조했다.</p>
+<ul>
+	<li>Organizacja podkreśla jak ważna jest potrzeba przygotowania skutecznego systemu prawnego i kładzie nacisk na świadomy i aktywny nadzór.</li>
+	<li>Organizacja podkreśliła, że w celu ustanowienia skutecznego systemu prawnego i poprawy świadomości potrzebne jest aktywne zarządzanie i nadzór.</li>
+	<li>Organizacja podkreśliła potrzebę aktywnego zarządzania oraz nadzoru w celu ustanowienia skutecznych regulacji prawnych i poprawy świadomości.</li>
+	<li>Organizacja podkreśliła też potrzebę aktywnego zarządzania i nadzoru nad skutecznym zaplanowaniem systemu prawnego (w sprawie mobbingu) dla świadomych zmian w tym temacie.</li>
+	<li>Organizacja podkreśliła znaczenie stworzenia skutecznego systemu prawnego oraz aktywnego zarządzania nadzorem w celu polepszenia świadomości.</li>
+	<li>Organizacja podkreśla jak ważna jest potrzeba przygotowania skutecznego systemu prawnego i kładzie nacisk na świadomy i aktywny nadzór.</li>
+	<li>Organizacja podkreśliła, że w celu ustanowienia skutecznego systemu prawnego i poprawy świadomości potrzebne jest aktywne zarządzanie i nadzór.</li>
+	<li>Organizacja podkreśliła konieczność aktywnego zarządzania i nadzorowania, w celu stworzenia skutecznego systemu prawnego oraz zwiększenia świadomości.</li>
+</ul>
 
 <h2>Źródło:</h2>
 
