--- a/uj/zajecia/24-25z/wats3-1/zajecia/9/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/9/index.html
@@ -52,11 +52,29 @@
 <h3>번역</h3>
 
 <p>0. “와! 산타 할아버지다”…연말 이웃나눔 ‘훈훈’</p>
+<ul>
+	<li>„Ojej! To Święty Mikołaj” – rozgrzewające serca dzielenie się z sąsiadami na koniec roku</li>
+</ul>
 <p>1. “얘들아 산타 왔다!”</p>
+<ul>
+	<li>„Dzieciaczki, przyszedł Mikołaj!”</li>
+</ul>
 <p>2. 성탄절을 이틀 앞두고 광주 취약계층 어린이들에게 온정의 손길을 전하는 ‘사랑의 몰래산타 대작전’이 펼쳐졌다.</p>
+<ul>
+	<li>Dwa dni przed Bożym Narodzeniem w Gwangju rozpoczęła się operacja pt. "Miłość od ukrytego Mikołaja" w celu podania pomocnej dłoni potrzebującym dzieciom.</li>
+</ul>
 <p>3. 지난 22일 밤 8시께 광주 동구의 지역아동센터.</p>
+<ul>
+	<li>Godzina 20, dzień 22 grudnia, regionalne Centrum Pomocy Dzieciom w dzielnicy Wschodniej w Gwangju.</li>
+</ul>
 <p>4. 자원봉사자 5명이 커다란 빨간 망토에 하얀 턱수염을 길게 늘어뜨린 산타로 분장해 등장했다.</p>
+<ul>
+	<li>Pięcioro wolontariuszy pojawiło się w przebraniu Mikołaja z ogromną, czerwoną peleryną i przypiętą białą, długą brodą.</li>
+</ul>
 <p>5. 그러자 조용했던 센터에 아이들의 환호가 터져 나왔다.</p>
+<ul>
+	<li>Ciche wcześniej Centrum w jednej chwili wypełniło się wiwatem dzieci.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -72,10 +90,25 @@
 <h3>번역</h3>
 
 <p>6-1. 촛불을 꽂은 케이크와 함께 방안 가득 울려 퍼지는 성탄 노래에</p>
+<ul>
+	<li>Pojawił się tort ze świeczkami, a pokój wypełnił się świątecznymi piosenkami,</li>
+</ul>
 <p>6-2. 센터 안은 금세 크리스마스 분위기로 가득해졌다.</p>
+<ul>
+	<li>co sprawiło, że Centrum od razu przepełnione zostało świąteczną atmosferą.</li>
+</ul>
 <p>7. “지금부터 선물 받을 사람 이름을 부를 거예요”.</p>
+<ul>
+	<li>„Od teraz będę wyczytywać imiona osób, które dostaną prezenty”.</li>
+</ul>
 <p>8. 산타 봉사자 황인홍 씨(29)가 아이들 한 명 한 명의 이름을 부르기 시작했다.</p>
+<ul>
+	<li>Przebrany za Mikołaja wolontariusz Hwang Inhong (29 l.) zaczął po kolei wywoływać dzieci.</li>
+</ul>
 <p>9. 아이들은 자신의 이름이 언제 들릴까 두 손을 모으고 귀를 곤두세웠다.</p>
+<ul>
+	<li>Dzieci zacisnęły dłonie i nadstawiły uszu w oczekiwaniu na usłyszenie swoich imion.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -100,11 +133,29 @@
 <h3>번역</h3>
 
 <p>10-1. “우와 감사합니다!” 산타에게 선물을 받아든 김승호 군(8)은</p>
+<ul>
+	<li>„Ojejku, dziękuję!” - powiedział 8-letni chłopiec Kim Seungho, gdy otrzymał prezent od Świętego Mikołaja,</li>
+</ul>
 <p>10-2. 손에 쥔 풍선을 흔들며 뛸 듯이 기뻐했다.</p>
+<ul>
+	<li>potrząsając trzymanym w dłoni balonem i prawie że skacząc z radości.</li>
+</ul>
 <p>11-1. 처음 보는 산타 분장이 무서운지 선생님 뒤에 숨어 있던 최슬기 양(7)은</p>
+<ul>
+	<li>7-letnia dziewczynka Choi Seulgi stała schowana za nauczycielem, tak jakby wystraszyła się widzianego po raz pierwszy mikołajowego przebrania,</li>
+</ul>
 <p>11-2. 자신의 이름이 불리자 수줍은 미소를 지으며 쭈뼛쭈뼛 선물을 건네받았다.</p>
+<ul>
+	<li>a gdy jej imię zostało wywołane, z nieśmiałym uśmiechem niepewnie przyjęła podarunek.</li>
+</ul>
 <p>12-1. 선물 보따리를 풀고 인형놀이 세트를 확인한 최 양은</p>
+<ul>
+	<li>Dziewczynka otworzyła prezent, który okazał się zestawem lalek,</li>
+</ul>
 <p>12-2. 행복한 마음을 감추지 못하고 함박웃음을 지었다.</p>
+<ul>
+	<li>i nie potrafiąc ukryć szczęścia, szeroko się uśmiechnęła.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -122,7 +173,13 @@
 <h3>번역</h3>
 
 <p>13. 5남매의 맏언니 강유진 양(13)은 겨울임에도 한여름 반소매를 입고 있었다.</p>
+<ul>
+	<li>Najstarsza z piątki rodzeństwa Kang Yujin (13 l.) mimo zimy miała na sobie krótki rękawek.</li>
+</ul>
 <p>14. 이날 유진 양이 받은 선물은 따뜻한 겨울 점퍼.</p>
+<ul>
+	<li>W tym dniu Yujin otrzymała w prezencie ciepłą zimową kurtkę.</li>
+</ul>
 <p>15-1. 나이보다 일찍 어른이 돼 버린 유진 양도</p>
 <p>15-2. 이날만큼은 동생들과 함께 해맑은 미소를 지었다.</p>
 
