--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -86,6 +86,7 @@
 		<li>relacje międzykoreańskie</li>
 		<li>społeczeństwo</li>
 		<li>wojskowość</li>
+		<li><del>bajki ludowe</del></li>
 		<li><del>botanika/florystyka</del></li>
 		<li><del>dyplomacja</del></li>
 		<li><del>e-sport</del></li>
@@ -287,15 +288,15 @@
 				<th scope="row">13</th>
 				<td>24 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">bajki ludowe</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-2/zajecia/11">흥부와 놀부 이야기</a></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">14</th>
 				<td>31 stycznia 2025</td>
-				<td class="schedule-exam">Test końcowy (14.00–15.00)</td>
+				<td class="schedule-exam">Test końcowy <nobr>(14.00–15.00, s. 1.01)</nobr></td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
 			</tr>
