--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -309,8 +309,8 @@
 			<tr>
 				<th scope="row">13</th>
 				<td>18 czerwca 2025</td>
-				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/3">Egzamin <nobr>(10.15–11.15, s. 2.02)</nobr></a></td>
-				<td class="schedule-exam" colspan="2">baśnie i legendy, psychologia</td>
+				<td class="schedule-exam">Egzamin <nobr>(10.15–11.15, s. 2.02)</nobr></td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/3">baśnie i legendy, psychologia</a></td>
 			</tr>
 		</tbody>
 	</table>
@@ -364,8 +364,8 @@
 				<td rowspan="2">5 czerwca 2025</td>
 			</tr>
 			<tr>
-				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/znaki/2">Kolokwium</a></td>
-				<td class="schedule-exam">分, 文</td>
+				<td class="schedule-exam">Kolokwium</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/znaki/2">分, 文</a></td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
@@ -376,8 +376,8 @@
 			<tr>
 				<th scope="row">9</th>
 				<td>17 czerwca 2025</td>
-				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/znakik/2">Egzamin <nobr>(11.00–12.00, s. 2.02)</nobr></a></td>
-				<td class="schedule-exam">文, 食</td>
+				<td class="schedule-exam">Egzamin <nobr>(11.00–12.00, s. 2.02)</nobr></td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/znakik/2">文, 食</a></td>
 			</tr>
 		</tbody>
 	</table>
