--- a/viiilo/zajecia/24-25z/jk1/zajecia/3/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/3/index.html
@@ -16,34 +16,149 @@
 <h2>Alfabet (한글) - spółgłoski</h2>
 
 <ul>
-	<li>ㄱ [k]</li>
-	<li>ㅋ [kh]</li>
-	<li>ㄲ [kk]</li>
+	<li>ㄱ [k/g]</li>
 	<li>ㄴ [n]</li>
-	<li>ㄷ [t]</li>
-	<li>ㅌ [th]</li>
-	<li>ㄸ [tt]</li>
-	<li>ㄹ [r]</li>
+	<li>ㄷ [t/d]</li>
+	<li>ㄹ [r/l]</li>
 	<li>ㅁ [m]</li>
-	<li>ㅂ [p]</li>
-	<li>ㅍ [ph]</li>
-	<li>ㅃ [pp]</li>
+	<li>ㅂ [p/b]</li>
 	<li>ㅅ [s]</li>
-	<li>ㅆ [ss]</li>
-	<li>ㅈ [dż]</li>
-	<li>ㅊ [cz]</li>
-	<li>ㅉ [dżdż]</li>
-	<li>ㅎ [h]</li>
 	<li>ㅇ [ng]</li>
+	<li>ㅈ [cz/dz]</li>
+	<li>ㅊ [czh]</li>
+	<li>ㅋ [kh]</li>
+	<li>ㅌ [th]</li>
+	<li>ㅍ [ph]</li>
+	<li>ㅎ [h]</li>
+	<li>ㄲ [kk]</li>
+	<li>ㄸ [tt]</li>
+	<li>ㅃ [pp]</li>
+	<li>ㅆ [ss]</li>
+	<li>ㅉ [czcz]</li>
 </ul>
 
 <p>* w nawiasie przybliżona polska wymowa</p>
 
-<!-- <h2>Ćwiczenie wymowy</h2> -->
+<h2>Ćwiczenie wymowy</h2>
 
-<!-- <ul class="gallery"> -->
-	<!-- <li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/Iq5avO8ZI7E"><img src="viiilo/zajecia/24-25z/jk1/zajecia/3/img/Iq5avO8ZI7E.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 3]"></a></li> -->
-	<!-- <li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/2kTEqux-Bno"><img src="viiilo/zajecia/24-25z/jk1/zajecia/3/img/2kTEqux-Bno.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 4]"></a></li> -->
-<!-- </ul> -->
+<ul class="gallery">
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/Iq5avO8ZI7E"><img src="viiilo/zajecia/24-25z/jk1/zajecia/3/img/Iq5avO8ZI7E.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 3]"></a></li>
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/2kTEqux-Bno"><img src="viiilo/zajecia/24-25z/jk1/zajecia/3/img/2kTEqux-Bno.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 4]"></a></li>
+</ul>
+
+<h2>Praca domowa</h2>
+
+<h3>Podręcznik (strony 18-25)</h3>
+
+<ul>
+	<li>
+		<div>strona 18, zadanie (1)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_1.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 18, zadanie (3)</li>
+	<li>
+		<div>strona 19, zadanie (4)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_2.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 19, zadanie (5)</li>
+	<li>
+		<div>strona 20, zadanie (1)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_3.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 20, zadanie (3)</li>
+	<li>
+		<div>strona 21, zadanie (4)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_4.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 21, zadanie (5)</li>
+	<li>
+		<div>strona 22, zadanie (1)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_5.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 22, zadanie (3)</li>
+	<li>
+		<div>strona 23, zadanie (4)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_6.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 23, zadanie (5)</li>
+	<li>
+		<div>strona 24, zadanie (1)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_7.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 24, zadanie (3)</li>
+	<li>
+		<div>strona 25, zadanie (4)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_8.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 25, zadanie (5)</li>
+</ul>
+
+<h3>Ćwiczenia (strony 6-16)</h3>
+
+<ul>
+	<li>strona 6, zadanie 1)</li>
+	<li>strona 7, zadanie 2)</li>
+	<li>strona 8, zadanie 3)</li>
+	<li>
+		<div>strona 8, zadanie 4)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_1.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>strona 8, zadanie 5)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_2.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 9, zadanie 1)</li>
+	<li>strona 10, zadanie 2)</li>
+	<li>strona 11, zadanie 3)</li>
+	<li>
+		<div>strona 11, zadanie 4)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_3.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>strona 11, zadanie 5)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_4.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 12, zadanie 1)</li>
+	<li>strona 13, zadanie 2)</li>
+	<li>strona 14, zadanie 3)</li>
+	<li>
+		<div>strona 14, zadanie 4)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_5.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>strona 14, zadanie 5)</div>
+		<div>
+			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_6.mp3"></audio>
+		</div>
+	</li>
+	<li>strona 15, zadanie 1)</li>
+	<li>strona 16, zadanie 2)</li>
+</ul>
 
 </body></html>
