--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -47,10 +47,10 @@
 				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-1">부침개 요리법 (przepis na placki koreańskie)</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-2">1과 음식</a></td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-2">01. 무슨 음식을 좋아해요</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-3">2과 취미</a></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-3">02. 도서관에 책을 빌리러 가요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
@@ -62,16 +62,13 @@
 			<tr>
 				<th scope="row">4</th>
 				<td>15 listopada 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 4</td>
+				<td class="schedule-lecture" rowspan="2">03. 백화점에서 쇼핑할 거예요</td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">5</th>
 				<td>22 listopada 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 5</td>
 			</tr>
 		</tbody>
 		<tbody>
