--- a/viiilo/zajecia/24-25z/jk2/zajecia/2-3/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/2-3/index.html
@@ -13,7 +13,7 @@
 
 <h1>Język koreański - poziom zaawansowany</h1>
 
-<h2>2과 취미</h2>
+<h2>02. 도서관에 책을 빌리러 가요</h2>
 
 <h3>Podręcznik</h3>
 
@@ -24,12 +24,29 @@
 			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_S_1B_02_1.mp3"></audio>
 		</div>
 	</li>
+	<li>strona 23, zadanie 3</li>
 	<li>
 		<div>strona 26, zadanie 1</div>
 		<div>
 			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_S_1B_02_2.mp3"></audio>
 		</div>
 	</li>
+	<li>strona 24, zadanie 2</li>
+	<li>strona 25, zadanie 1</li>
+	<li>strona 26, zadanie 1</li>
+	<li>strona 26, zadanie 2</li>
+	<li>strona 27, zadanie 1</li>
+</ul>
+
+<h2>Praca domowa</h2>
+
+<h3>Podręcznik</h3>
+
+<ul>
+	<li>strona 23, zadanie 2</li>
+	<li>strona 24, zadanie 1</li>
+	<li>strona 25, zadanie 2</li>
+	<li>strona 27, zadanie 2</li>
 </ul>
 
 <h3>Ćwiczenia</h3>
